# zeddit

./: .gitignore  pyproject.toml
src/: db.sqlite3  manage.py
src/apps/api/: apps.py  urls.py
src/apps/blog/: admin.py  models.py  urls.py  views.py
src/apps/blog/migrations/: 0001_initial.py  0002_vote_created.py  0003_alter_article_poster.py
src/apps/blog/models/: __init__.py  article.py  vote.py
src/apps/blog/serializers/: serializers.py
src/apps/blog/views/: article_detail.py  article_list.py  article_retrieve_destroy.py  vote_create.py
src/zeddit/: asgi.py  settings.py  urls.py  wsgi.py
